# calendar-message

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/: copilot-instructions.md
.github/workflows/: ci.yml
src/: App.css  App.tsx  index.css  main.tsx  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  lib.rs  notify.rs  scheduler.rs  webhook.rs
src/components/: app-header.test.tsx  app-header.tsx  app-shell.tsx  app-sidebar.tsx  delete-message-dialog.tsx  group-editor-form.tsx  group-form-dialog.tsx  message-calendar.tsx  message-editor-form.tsx  message-form-dialog.test.tsx  message-form-dialog.tsx  page-header.tsx  quick-create-panel.tsx  right-rail.tsx  schedule-datetime-picker.tsx  stats-overview.tsx  status-badge.tsx  template-editor-form.tsx  template-form-dialog.test.tsx  template-form-dialog.tsx  theme-menu.tsx  today-messages-panel.tsx
src/hooks/: use-group-editor.ts  use-message-editor.ts  use-message-templates-data.ts  use-message-templates.test.tsx  use-message-templates.ts  use-scheduled-messages-data.ts  use-scheduled-messages.test.tsx  use-scheduled-messages.ts  use-template-editor.ts  use-webhook-groups-data.ts  use-webhook-groups.ts
src/lib/: calendar-localizer.ts  message-status.test.ts  message-status.ts
src/pages/: calendar-page.tsx  group-editor-page.tsx  group-list-page.tsx  message-editor-page.tsx  message-list-page.tsx  settings-page.tsx  template-editor-page.tsx  template-list-page.tsx
src/store/: message-templates-atoms.ts  (+2 more)
(+12 files in other folders)
